--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
   
   <!-- Conteúdo do site - Website content -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2fa2f3;">
       <a class="navbar-brand" href="#">Sistema escolar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -62,7 +62,17 @@
 
   <!-- Parte principal -->
   <div class="container">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit totam facilis quod, sed nihil, distinctio aperiam esse animi vitae iure voluptas laborum, assumenda tempore voluptatem corrupti? Eaque temporibus sint maiores!
+    <br>
+    <div class="jumbotron">
+      <h1 class="display-4">Bem vindo!</h1>
+      <p class="lead">Esta é uma prévia do sistema de gestão escolar.</p>
+      <hr class="my-4">
+      <p>Primeiro, para usar qualquer recurso deste app deve-se definir um ou mais administradores gerais. Esses administradores distribuirão e criarão as contas para os diferentes setores da escola. Caso já tenha definido um admnistrador, apenas faça login.</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="#" role="button">Cadastrar um administrador</a>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
+      </p>
+    </div>
   </div>
 
   <!-- Carregando outros arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
