alterei functions trabalho no login

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,6 @@
   <script defer src="/__/firebase/8.1.1/firebase-messaging.js"></script>
   <script defer src="/__/firebase/8.1.1/firebase-storage.js"></script>
   <script defer src="/__/firebase/8.1.1/firebase-analytics.js"></script>
-  <script defer src="/__/firebase/8.1.1/firebase-remote-config.js"></script>
   <script defer src="/__/firebase/8.1.1/firebase-performance.js"></script>
   <!-- 
     initialize the SDK after all desired features are loaded, set useEmulator to false
@@ -69,13 +68,16 @@
       <hr class="my-4">
       <p>Primeiro, para usar qualquer recurso deste app deve-se definir um ou mais administradores gerais. Esses administradores distribuirão e criarão as contas para os diferentes setores da escola. Caso já tenha definido um admnistrador, apenas faça login.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Cadastrar um administrador</a>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
+        <a class="btn btn-primary btn-lg" href="" role="button">Cadastrar um administrador</a>
+        <a class="btn btn-primary btn-lg" href="login.html" role="button">Login</a>
       </p>
     </div>
   </div>
 
   <!-- Carregando outros arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
   <script src="resources/AST-Notif/js/ast-notif.min.js"></script>
+
+  <!-- Outros Arquivos -->
+  <script src="js/app.js"></script>
 </body>
 </html>
