--- a/public/login.html
+++ b/public/login.html
@@ -37,38 +37,39 @@
   <!-- Conteúdo do site - Website content -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2fa2f3;">
-      <a class="navbar-brand" href="#">Sistema escolar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Início <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Administração</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Financeiro</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Professores</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+        <a class="navbar-brand" href="#">Sistema escolar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Início <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Administração</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Financeiro</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Professores</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
   </header>
 
   <!-- Parte principal -->
   <div class="container">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit totam facilis quod, sed nihil, distinctio aperiam esse animi vitae iure voluptas laborum, assumenda tempore voluptatem corrupti? Eaque temporibus sint maiores!
+    
   </div>
 
   <!-- Carregando outros arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
   <script src="resources/AST-Notif/js/ast-notif.min.js"></script>
 
-  <!-- Outros arquivos -->
+  <!-- Outros Arquivos -->
   <script src="js/app.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
