usei outra forma no functions

--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="resources/bootstrap/css/bootstrap.min.css">
   <!-- Carregando arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
   <link rel="stylesheet" href="resources/AST-Notif/css/ast-notif.min.css">
+  <link rel="shortcut icon" href="images/domain.png" type="image/x-icon">
 </head>
 <body>
   <!-- Outros Arquivos necessários para o Bootstrap -->
