--- a/public/login.html
+++ b/public/login.html
@@ -27,6 +27,7 @@
   <script defer src="/__/firebase/8.1.1/firebase-messaging.js"></script>
   <script defer src="/__/firebase/8.1.1/firebase-storage.js"></script>
   <script defer src="/__/firebase/8.1.1/firebase-analytics.js"></script>
+  <script defer src="/__/firebase/8.1.1/firebase-remote-config.js"></script>
   <script defer src="/__/firebase/8.1.1/firebase-performance.js"></script>
   <!-- 
     initialize the SDK after all desired features are loaded, set useEmulator to false
@@ -69,7 +70,7 @@
   <script src="resources/AST-Notif/js/ast-notif.min.js"></script>
 
   <!-- Outros Arquivos -->
-  <script defer src="js/app.js"></script>
-  <script defer src="js/login.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/login.js"></script>
 </body>
 </html>
