fuções no painel do administrador na pag de login
Programei as funções do administrador master do sistema para liberar o acesso as áreas do sistema e o próximo passo e trabalhar na exclusão de usuários

--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,9 @@
       <h1 class="display-4">Bem vindo!</h1>
       <p class="lead">Esta é uma prévia do sistema de gestão escolar.</p>
       <hr class="my-4">
-      <p>Primeiro, para usar qualquer recurso deste app deve-se definir um ou mais administradores gerais. Esses administradores distribuirão e criarão as contas para os diferentes setores da escola. Caso já tenha definido um admnistrador, apenas faça login.</p>
+      <p>Primeiro, para usar qualquer recurso deste app deve-se definir um ou mais administradores gerais. Esses administradores distribuirão e criarão as contas para os diferentes setores da escola. Caso já tenha definido um admnistrador, apenas faça login. Para definir um administrador é necessário ter acesso direto ao console do banco de dados.</p>
       <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Cadastrar um administrador</a>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
+        <a class="btn btn-primary btn-lg" href="login.html" role="button">Login</a>
       </p>
     </div>
   </div>
