--- a/public/login.html
+++ b/public/login.html
@@ -107,7 +107,7 @@
           <div class="col-sm-6" id="painelAdm" style="display: none;">
           <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Painel do admnistrador</h5>
+                <h5 class="card-title">Painel do administrador</h5>
               <button onclick="listaUsuarios()" class="btn btn-block btn-primary">Liberar acessos</button>
               <button onclick="antesDeDeletar()" class="btn btn-block btn-danger">Remover acessos</button>
               </div>
@@ -117,8 +117,9 @@
   </div>
   </div>
 
+
   <!-- Carregando outros arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
-  <script src="resources/AST-Notif/js/ast-notif.min.js"></script>
+  <script defer src="resources/AST-Notif/js/ast-notif.min.js"></script>
 
   <!-- Outros Arquivos -->
   <script defer src="js/app.js"></script>
