decobri como usar httpsCallable
Marco importante consegui retornar os valores que eu queria. aeeeee

--- a/public/login.html
+++ b/public/login.html
@@ -108,8 +108,7 @@
           <div class="card">
               <div class="card-body">
                 <h5 class="card-title">Painel do administrador</h5>
-              <button onclick="listaUsuarios()" class="btn btn-block btn-primary">Liberar acessos</button>
-              <button onclick="antesDeDeletar()" class="btn btn-block btn-danger">Remover acessos</button>
+              <button onclick="listaUsuarios()" class="btn btn-block btn-primary">Gerenciar usuários do sistema</button>
               </div>
           </div>
           </div>
