sistema aprimorado com auth custom tokens e httpsCallable
Ainda falta terminar a parte de modificação de acessos para utilizar o mesmo sistema do auth custom tokens do firebase

--- a/public/login.html
+++ b/public/login.html
@@ -85,6 +85,7 @@
     </div>
   </div>
   <div class="container">
+    <img src="./images/carregamento.gif" class="rounded mx-auto d-block" alt="Carregando" width="60px" id="loader">
     <div class="container" id="firebaseui-auth-container">
 
     </div>
@@ -104,6 +105,7 @@
               </div>
           </div>
           </div>
+          
           <div class="col-sm-6" id="painelAdm" style="display: none;">
           <div class="card">
               <div class="card-body">
