--- a/public/index.html
+++ b/public/index.html
@@ -37,17 +37,20 @@
   <!-- Conteúdo do site - Website content -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2fa2f3;">
-      <a class="navbar-brand" href="#">Sistema escolar</a>
+      <a class="navbar-brand" href="./">Sistema escolar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Início <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./">Início <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Administração</a>
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="adm.html">Administração</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Financeiro</a>
@@ -67,7 +70,7 @@
       <h1 class="display-4">Bem vindo!</h1>
       <p class="lead">Esta é uma prévia do sistema de gestão escolar.</p>
       <hr class="my-4">
-      <p>Primeiro, para usar qualquer recurso deste app deve-se definir um ou mais administradores gerais. Esses administradores distribuirão e criarão as contas para os diferentes setores da escola. Caso já tenha definido um admnistrador, apenas faça login. Para definir um administrador é necessário ter acesso direto ao console do banco de dados.</p>
+      <p>Primeiro, para usar qualquer recurso deste app deve-se definir um ou mais administradores gerais (masters). Esses administradores delegarão às contas para os diferentes setores da escola no sistema. Caso já tenha definido um administrador, apenas faça login. Para definir um administrador é necessário ter acesso direto ao console do banco de dados, por questões de segurança.</p>
       <p class="lead">
         <a class="btn btn-primary btn-lg" href="login.html" role="button">Login</a>
       </p>
