--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Modelo</title>
+  <title>Login</title>
   <!-- Arquivos necessários para o Bootstrap -->
   <link rel="stylesheet" href="resources/bootstrap/css/bootstrap.min.css">
   <!-- Carregando arquivos da biblioteca AST-Notif. Créditos: https://github.com/anandastoon/AST-Notif -->
@@ -41,17 +41,20 @@
   <!-- Conteúdo do site - Website content -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #2fa2f3;">
-        <a class="navbar-brand" href="#">Sistema escolar</a>
+        <a class="navbar-brand" href="./">Sistema escolar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./">Início</a>
+            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Início <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="login.html">Login <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Administração</a>
+              <a class="nav-link" href="adm.html">Administração</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Financeiro</a>
