ajustes para iniciar a branch "secreteria"

--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,10 @@
             <a class="nav-link" href="adm.html">Administração</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Financeiro</a>
+            <a class="nav-link" href="secretaria.html">Secretaria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Professores</a>
+            <a class="nav-link" href="professores.html">Professores</a>
           </li>
         </ul>
       </div>
