começando dashboard da secretaria
Descobri novas funções ótimas para segurança dos dados no realtime database (acessar as regras do banco de dados para ver o exemplo que registrei lá)

--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
     to avoid connecting the SDK to running emulators.
   -->
   <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth__pt_br.js"></script>
   
   <!-- Conteúdo do site - Website content -->
   <header>
@@ -54,10 +54,10 @@
               <a class="nav-link" href="login.html">Login <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="adm.html">Administração</a>
+              <a class="nav-link" href="secretaria/">Administração</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Financeiro</a>
+              <a class="nav-link" href="secretaria/">Secretaria</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Professores</a>
