fiz o total de cada turno

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="adm.html">Administração</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="secretaria.html">Secretaria</a>
+            <a class="nav-link" href="secretaria/">Secretaria</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="professores.html">Professores</a>
