--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Dashboard Template for Bootstrap</title>
+    <title>Secretaria</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../resources/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -219,12 +219,18 @@
                           <td id="domingoNoite">0</td>
                           
                         </tr>
+                        <tr>
+                          <td><b>Total</b></td>
+                          <td id="totalManha">0</td>
+                          <td id="totalTarde">0</td>
+                          <td id="totalNoite">0</td>
+                        </tr>
                       </tbody>
                     </table>
                   </div>
                 </div>
                 <div class="col">
-                  3 of 3
+                  <h2>Aniversariantes do mês</h2>
                 </div>
               </div>
             </div>
