--- a/public/login.html
+++ b/public/login.html
@@ -89,8 +89,50 @@
   </div>
   <div class="container">
     <img src="./images/carregamento.gif" class="rounded mx-auto d-block" alt="Carregando" width="60px" id="loader">
-    <div class="container" id="firebaseui-auth-container">
-
+    <div class="container" id="loginContainer">
+      <form id="areaLogin">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" name="email" class="form-control" id="inputEmail4" placeholder="Email">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputPassword4">Senha</label>
+            <input type="password" name="senha" class="form-control" id="inputPassword4" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block" id="btnEntrar">Entrar</button>
+          <small id="cadastrarEntrar" class="form-text text-muted">
+            <a href="#" onclick="liberaAreaCadastro()" id="toggleCadastrarEntrar">Quero me cadastrar</a>
+          </small>
+        </div>
+        <div id="cadastroNovoUsuario" style="display: none;">
+          <div class="form-group">
+            <label for="inputAddress">Repita a senha</label>
+            <input type="password" name="senhaRepetida" class="form-control" id="senhaRepetida" placeholder="Repita a senha...">
+          </div>
+          <div class="form-group">
+            <label for="inputAddress2">Nome e sobrenome</label>
+            <input type="text" name="nome" class="form-control" id="nomeSobrenome" placeholder="Nome e sobrenome...">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputCity">Data de nascimento</label>
+              <input type="date" name="dataNascimento" class="form-control" id="dataNascimento">
+            </div>
+            <div class="form-group col">
+              <label for="inputZip">Foto</label>
+              <input type="file" name="foto" class="form-control" id="inputZip">
+              <small id="passwordHelpBlock" class="form-text text-muted">
+                Opcional, mas facilitará sua identificação no sistema. Você pode alterar sua foto depois.
+              </small>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block" id="btnCadastrar" disabled>Cadastrar</button>
+          <small id="cadastrarEntrar" class="form-text text-muted">
+            <a href="#" onclick="liberaAreaCadastro(false)" id="entrarCadastrar">Quero entrar no sistema</a>
+          </small>
+        </div>
+      </form>
     </div>
     <div id="logado" class="container" style="visibility: hidden;">
       <div class="row">
