Sistema login reformulado e pronto

--- a/public/login.html
+++ b/public/login.html
@@ -115,9 +115,11 @@
             <input type="text" name="nome" class="form-control" id="nomeSobrenome" placeholder="Nome e sobrenome...">
           </div>
           <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col">
               <label for="inputCity">Data de nascimento</label>
-              <input type="date" name="dataNascimento" class="form-control" id="dataNascimento">
+              <input type="text" name="dia" id="dia" placeholder="Dia(5)" maxlength="2" size="5">
+              <input type="text" name="mês" id="mês" placeholder="Mês(1)" maxlength="2" size="5">
+              <input type="text" name="ano" id="ano" placeholder="Ano(1998)" maxlength="4" size="8">
             </div>
             <div class="form-group col">
               <label for="inputZip">Foto</label>
