função de cadastrar turmas

--- a/public/login.html
+++ b/public/login.html
@@ -88,8 +88,8 @@
     </div>
   </div>
   <div class="container">
-    <img src="./images/carregamento.gif" class="rounded mx-auto d-block" alt="Carregando" width="60px" id="loader">
-    <div class="container" id="loginContainer">
+    <img src="./images/carregamento.gif" class="rounded mx-auto d-block" alt="Carregando" width="60px" id="loader" style="position: absolute; margin-top: 150px; margin-left: 600px; z-index: 400;">
+    <div class="container" id="loginContainer" style="display: none;">
       <form id="areaLogin">
         <div class="form-row">
           <div class="form-group col-md-6">
@@ -136,7 +136,7 @@
         </div>
       </form>
     </div>
-    <div id="logado" class="container" style="visibility: hidden;">
+    <div id="logado" class="container" style="visibility: hidden; margin-top: 5px;">
       <div class="row">
           <div class="col-sm-6">
           <div class="card">
