coloquei timestamp no cadastro de aluno e os emails faltantes

--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -731,6 +731,10 @@
                     <label for="inputAddress">Número Celular</label>
                     <input type="text" class="form-control" id="numeroCelularFinanceiroAluno" name="numeroCelularFinanceiroAluno" placeholder="Celular">
                   </div>
+                  <div class="form-group col-md-5">
+                    <label for="inputPassword4">Email</label>
+                    <input type="email" class="form-control" id="emailAluno" name="emailAluno" placeholder="Email">
+                  </div>
                   <div class="form-group col-auto">
                     <label for="inputEmail4">RG</label>
                     <input type="number" class="form-control" id="rgFinanceiroAluno" name="rgFinanceiroAluno" placeholder="RG">
@@ -766,6 +770,10 @@
                   <div class="form-group col-md-2">
                     <label for="inputAddress">Número Celular</label>
                     <input type="text" class="form-control" id="numeroCelularPedagogicoAluno" name="numeroCelularPedagogicoAluno" placeholder="Celular">
+                  </div>
+                  <div class="form-group col-md-5">
+                    <label for="inputPassword4">Email</label>
+                    <input type="email" class="form-control" id="emailAluno" name="emailAluno" placeholder="Email">
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputEmail4">RG</label>
