fiz transaction pra atualizar tabela semanal e coloquei o atualizador do sistema

--- a/public/login.html
+++ b/public/login.html
@@ -64,6 +64,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Professores</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" onclick="window.location.reload(true)">&nbsp;&nbsp;Atualizar sistemas</a>
+            </li>
           </ul>
         </div>
       </nav>
