--- a/public/login.html
+++ b/public/login.html
@@ -12,12 +12,14 @@
 
   <link rel="stylesheet" href="css/loader.css">
   
-  <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
+  <!--<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />-->
 </head>
 <body>
-  <!-- Outros Arquivos necessários para o Bootstrap -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+  <script src="/resources/jQuery/jquery-3.2.1.slim.min.js"></script>
+  <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
+  <script src="/resources/popper/popper.min.js"></script>
   <script src="resources/bootstrap/js/bootstrap.min.js"></script>
 
   <!-- Inicialização do Firebase -->
@@ -38,7 +40,7 @@
     to avoid connecting the SDK to running emulators.
   -->
   <script defer src="/__/firebase/init.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth__pt_br.js"></script>
+  <!--<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth__pt_br.js"></script>-->
   
   <!-- Conteúdo do site - Website content -->
   <header>
