--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -120,7 +120,9 @@
         </div>
       </nav>
       <!-- Loader -->
+      
 <div id="loader" class="window-loader">
+  <label id="loaderMsg" class="text-white-50 bg-dark">Aguarde...</label>
     <div class="loader"></div>
 </div>
     <div class="container-fluid">
@@ -514,7 +516,7 @@
                   </div>
                   <div class="form-group col-auto">
                     <label for="inputPassword4">Data de nascimento</label>
-                    <input type="date" class="form-control" id="dataNascimentoAluno" name="dataNascimentoAluno" placeholder="Data">
+                    <input type="date" class="form-control" id="dataNascimentoAluno" name="dataNascimentoAluno" placeholder="Data" onchange="calculaIdade(this.value)">
                   </div>
                 </div>
                 <div class="form-row">
