coloquei o alerta pra usar o chorme pra evitar incompatibilidades

--- a/public/login.html
+++ b/public/login.html
@@ -98,6 +98,7 @@
     </div>
   </div>
   <div class="container">
+    <small class="text-muted">Use o navegador Chrome para evitar incompatibilidades. <a href="https://www.google.com/chrome/" target="_blank">Site para download do chrome</a></small>
     <div class="container" id="loginContainer" style="display: none;">
       <form id="areaLogin">
         <div class="form-row">
