--- a/public/secretaria/index.html
+++ b/public/secretaria/index.html
@@ -504,7 +504,7 @@
               <label class="h3">Cadastro de alunos</label>
               <hr>
               <form id="formCadastroAluno">
-                <input type='reset' class="btn btn-warning btn-sm" value='Limpar todos os campos'/>
+                <input type='reset' class="btn btn-warning btn-sm" id="resetForm" value='Limpar todos os campos'/>
                 <a class="btn btn-info btn-sm" onclick="carregaProfsETurmas()"><span data-feather="refresh-cw"></span> Atualizar número de matrícula e turmas</a>
                 <br> <br>
                 <label class="h6">Dados pessoais</label>
